_sass/_layout.scss
/**
 * Site header
 */
// .site-header {
//     border-top: 5px solid $grey-color-dark;
//     border-bottom: 1px solid $grey-color-light;
//     min-height: 56px;
//
//     // Positioning context for the mobile navigation icon
//     position: relative;
// }
//
// .site-title {
//     font-size: 26px;
//     line-height: 56px;
//     letter-spacing: -1px;
//     margin-bottom: 0;
//     float: left;
//
//     &,
//     &:visited {
//         color: $grey-color-dark;
//     }
// }
//
// .site-nav {
//     float: right;
//     line-height: 56px;
//
//     .menu-icon {
//         display: none;
//     }
//
//     .page-link {
//         color: $text-color;
//         line-height: $base-line-height;
//
//         // Gaps between nav items, but not on the first one
//         &:not(:first-child) {
//             margin-left: 20px;
//         }
//     }
//
//     @include media-query($on-palm) {
//         position: absolute;
//         top: 9px;
//         right: 30px;
//         background-color: $background-color;
//         border: 1px solid $grey-color-light;
//         border-radius: 5px;
//         text-align: right;
//
//         .menu-icon {
//             display: block;
//             float: right;
//             width: 36px;
//             height: 26px;
//             line-height: 0;
//             padding-top: 10px;
//             text-align: center;
//
//             > svg {
//                 width: 18px;
//                 height: 15px;
//
//                 path {
//                     fill: $grey-color-dark;
//                 }
//             }
//         }
//
//         .trigger {
//             clear: both;
//             display: none;
//         }
//
//         &:hover .trigger {
//             display: block;
//             padding-bottom: 5px;
//         }
//
//         .page-link {
//             display: block;
//             padding: 5px 10px;
//         }
//     }
// }

/**
 * Site navigation
 */

.nav-main {
  @include gradient(#FFFFFF, #E9E9F3);
  position: fixed;
  height: 45px;
  width: 100%;
  z-index: 6;
  -webkit-box-shadow: 0px 2px 7px 2px rgba(0,0,0,0.15);
  box-shadow: 0px 2px 7px 2px rgba(0,0,0,0.15);

  .nav-left, .nav-right {
    position: relative;
    display: inline-block;
    padding-top: $spacing-unit / 4;
    z-index: 2;

    a {
      color: $text-dark;
      font-weight: 600;
      font-size: $text-lg;
    }
  }

  .nav-left {
    float: left;
    padding-left: $spacing-unit;
  }

  .nav-right {
    float: right;
    padding-right: $spacing-unit  ;

    li {
      display: inline-block;
      margin-left: $spacing-unit;
    }
  }
}

@media screen and (max-width: $on-palm) {
  .nav-main {
    // padding: $spacing-unit / 3;

    .nav-left {
      padding-left: $spacing-unit / 3;
      width: 34%;
    }

    .nav-right {
     padding-right: $spacing-unit / 3;
     width: 60%;

      .nav-items {
        width: 100%;
        text-align: right;

        li {
          margin-left: $spacing-unit / 2;
        }
      }
    }
  }
}


/**
 * Site footer
 */
.site-footer {
    border-top: 1px solid $grey-color-light;
    padding: $spacing-unit 0;
}

.footer-heading {
    font-size: 18px;
    margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
    list-style: none;
    margin-left: 0;
}

.footer-col-wrapper {
    font-size: 15px;
    color: $grey-color;
    margin-left: -$spacing-unit / 2;
    @extend %clearfix;
}

.footer-col {
    float: left;
    margin-bottom: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
}

.footer-col-1 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
    width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
    width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
    .footer-col-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
        width:         calc(50% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

@include media-query($on-palm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}



/**
 * Page content
 */

.page-content {
    //padding: $spacing-unit 0;
    position: relative;
    z-index: 4;
}

.page-section {
  margin-top: $spacing-unit;
  margin-bottom: $spacing-unit;
  padding-top: $spacing-unit;
  padding-bottom: $spacing-unit;
}

.page-heading {
    @include strong-text;
    font-size: $text-lg;
    text-align: center;
    width: 100%;
    border-bottom: 1px solid #E0E0E0;
    line-height: 0.1em;
    margin-top: $spacing-unit;
    margin-bottom: $spacing-unit;

    span {
      background: $background-color;
      padding: 0 10px;
    }
}


/**
 * Posts
 */
 .post-header {
   @include strong-text;
   margin-top: $spacing-unit;
   margin-bottom: $spacing-unit;
 }

 .post-preview-new {
   @include flex;
   @include flexcenter;
   align-items: flex-end;
   position: relative;
   z-index: -1;
   min-height: 485px;
   padding-top: $spacing-unit;
   background-color: $background-dark;
   text-align: center;
   -webkit-box-shadow: inset 0px 0px 11px 4px rgba(0,0,0,0.5);
   box-shadow: inset 0px 0px 11px 4px rgba(0,0,0,0.5);
 }

.post-details-new {

  .wrapper {
    margin-top: -$spacing-unit * 2;
  }

  .post-details-card {
    z-index: 1;
    position: relative;
  }

   .post-details-new-bg {
     height: 100px;
     margin-top: -150px;
     margin-bottom: -$spacing-unit;
     padding-bottom: $spacing-unit;
     background-color: #F5F5F9;
     z-index: 0;
     position: relative;
   }
 }

 .post-list {
   @include flexcenter;

   .post-block, .more-block {
     @include spacing-sm;
     @include card;
     @include transition-all;
     display: inline;
     position: relative;
     z-index: 5;
     overflow: hidden;

     // .more-image { border-bottom: 1px solid #00E5FF; }
     // .block-title { @include strong-text; }
   }

   .post-block {
     width: 75%;
     height: 220px;

     .post-image {
       // @include flexcenter;
     }

       .post-title-new {
         @include text-shadow;
         position: absolute;
         margin: 1em;
         z-index: 2;
       }

       .post-image-new {
         bottom: 0;
         position: absolute;
         z-index: 1;
       }

     button {
       position: absolute;
       bottom: 0;
       right: 0;
       margin: 1em;
       z-index: 2;
     }
   }

   .more-block {
     .more-details {
       white-space: nowrap;
       text-overflow: ellipsis;
     }
   }
 }

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }
}

// .post-meta {
//   font-size: $small-font-size;
//   color: $grey-color;
// }

.post-link {
  display: block;
}

.post-title {
  @include media-query($on-laptop) {
    font-size: 36px;
  }
}

.post {
  .post-content {
    margin-top: $spacing-unit;
    margin-bottom: $spacing-unit;

    h2 {
      font-size: 32px;

      @include media-query($on-laptop) {
        font-size: 28px;
      }
    }

    h3 {
      font-size: 26px;

      @include media-query($on-laptop) {
          font-size: 22px;
      }
    }

    h4 {
      font-size: 20px;

      @include media-query($on-laptop) {
          font-size: 18px;
      }
    }
  }

  .post-details-card {
    @include card;
    @include gradient(#31314E,#29293C);
    padding: $spacing-unit / 2;
    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.5);

    &:hover {
      box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
      -webkit-transform: scale(1);
      -ms-transform: scale(1);
      -moz-transform: scale(1);
      transform: scale(1);
    }
  }
}

.post-content-section-title {
  @include gradient(#F5F5F9, #FFFFFF);
  position: relative;
  //margin-top: $spacing-unit * 4;
  height: 350px;
  width: 100%;

  .section-title {
    font-size: $text-xxl;
    font-weight: 700;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 8px;
  }
}

.post-content-image-side {
  section { display: inline-block; }

  .text {
    vertical-align: top;
    width: 54%;
  }

  .image { width: 45%; }
}

.vnn-brand {
  margin-bottom: -180px;
  z-index: -1;
  background-image: url("/../images/vnn-bg.png");
  height: 400px;
}


/**
 * Screen: sm
 */
 @media screen and (min-width: $on-palm) {
   .post-list {
     .post-block {
       width: 45%;
       height: 200px;
     }
   }

   .more-block {
     max-width: 17%;

     .more-details {
       padding: .15em 0 .15em .5em;
     }
   }
 }


/**
 * Screen: md
 */
 @media screen and (min-width: $on-laptop) {
   .wrapper {
     max-width: -webkit-calc(1080px - (#{$spacing-unit} * 2)); //og = 800px
     max-width:         calc(1080px - (#{$spacing-unit} * 2)); //og = 800px
   }

   .post {
     .post-preview {
       float: right;
       margin-top: -70px;
       width: 49%;
     }
   }

   .post-details-new {
     .wrapper { max-width: 50%; }
   }

   .post-content {
     h1, h2, h3, h4, h6, h6, p, .post-content-image-side {
       margin-left: auto;
       margin-right: auto;
       margin-bottom: $spacing-unit / 6;
       max-width: -webkit-calc(1000px - (#{$spacing-unit} * 10));
       max-width:         calc(1000px - (#{$spacing-unit} * 10));
     }
   }

   .post-list {
     .post-block {
       width: 30%;
       height: 230px;
     }
   }

   .about {
     @include flex;
     margin-top: 0;
     padding-top: $spacing-unit * 3;

     .bio, .about-photo { @include spacing-md; }

     .bio {
       width: 60%;
     }

     .about-photos {
       width: auto;
       max-width: 360px;
     }

     .about-gallery {
       margin-top: $spacing-unit / 3;
       white-space: nowrap;

       figure {
         display: inline-block;
         margin-left: auto;
         margin-right: auto;
         width: 85px;

         img {
           border-radius: 2px;
         }
       }
     }

     .about-photo-mobile { display: none; }
   }
}


/**
 * Screen: lg
 */
  @media screen and (min-width: $on-display) {
    .post-list {
      .post-block {
        width: 48%;
        height: 325px;
        // max-width: 285px;
      }
    }
  }

